래퍼클래스의 다양한 static메소드